compiler/src/test/resources/golden/errors/derive_fn_field.dawn
type Bad = | Bad(f: fn(Int) -> Int) derive Show

pub fn main() -> Unit !io = println("x")
