compiler/src/test/resources/golden/errors/derive_fn_field.err
error: cannot derive Show for `Bad`: field `f` of type fn(Int) -> Int is not printable
  --> derive_fn_field.dawn:1:18
  |
1 | type Bad = | Bad(f: fn(Int) -> Int) derive Show
  |                  ^^^^^^^^^^^^^^^^^
  = hint: functions cannot be printed
